if(ENABLE_LIGHTNING OR ENABLE_LIGHTNING_KOKKOS)
add_subdirectory(lightning)
configure_file(lightning/lightning_dynamic/lightning_qubit.toml lightning_qubit.toml)
configure_file(lightning/lightning_kokkos/lightning_kokkos.toml lightning_kokkos.toml)
endif()
if(ENABLE_OPENQASM)
add_subdirectory(openqasm)
configure_file(openqasm/braket_local_qubit.toml braket_local_qubit.toml)
configure_file(openqasm/braket_aws_qubit.toml braket_aws_qubit.toml)
endif()
