add_subdirectory(dummy)
configure_file(dummy/dummy_device.toml dummy_device.toml)
if(ENABLE_LIGHTNING)
add_subdirectory(lightning)
endif()
if(ENABLE_OPENQASM)
add_subdirectory(openqasm)
configure_file(openqasm/braket_local_qubit.toml braket_local_qubit.toml)
configure_file(openqasm/braket_aws_qubit.toml braket_aws_qubit.toml)
endif()
