add_subdirectory(null_device)
configure_file(null_device/null_device.toml null_device.toml)
if(ENABLE_LIGHTNING)
add_subdirectory(lightning)
endif()
if(ENABLE_OPENQASM)
add_subdirectory(openqasm)
configure_file(openqasm/braket_local_qubit.toml braket_local_qubit.toml)
configure_file(openqasm/braket_aws_qubit.toml braket_aws_qubit.toml)
endif()
